Fix date wrapping

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -221,6 +221,8 @@ h2.book-details-subtitle {
 
 .post-date {
   width: 85px;
+  flex-shrink: 0;
+  white-space: nowrap;
 }
 
 .post-list-content {
